plugins {
    id 'java'
    id("com.github.bjornvester.xjc") version "1.9.1"
}

group = 'com.example'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(8)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // ===== Spring Framework 3.1.2 =====
    implementation "org.springframework:spring-context:3.1.2.RELEASE"
    implementation "org.springframework:spring-beans:3.1.2.RELEASE"
    implementation "org.springframework:spring-core:3.1.2.RELEASE"
    implementation "org.springframework:spring-aop:3.1.2.RELEASE"
    implementation "org.springframework:spring-tx:3.1.2.RELEASE"
    implementation "org.springframework:spring-jdbc:3.1.2.RELEASE"
    implementation "org.springframework:spring-expression:3.1.2.RELEASE"
    implementation "org.springframework:spring-context-support:3.1.2.RELEASE"
    implementation "org.springframework:spring-asm:3.1.2.RELEASE"
    implementation "org.springframework:spring-aspects:3.1.2.RELEASE"

    // Spring 3.1에서는 CGLIB 필요
    implementation "cglib:cglib:2.2.2"
    implementation "asm:asm:3.3.1"

    // OXM (JAXB 2 기반)
    implementation "org.springframework:spring-oxm:4.2.9.RELEASE"

    implementation "javax.xml.bind:jaxb-api:2.3.1"
    implementation "org.glassfish.jaxb:jaxb-runtime:2.3.1"

    implementation "javax.annotation:javax.annotation-api:1.3.2"

    // ===== JavaMail =====
    implementation "javax.mail:mail:1.4.7"
    implementation "javax.activation:activation:1.1.1"

    // ===== JDBC =====
    implementation "mysql:mysql-connector-java:5.1.49"

    // ===== Logging =====
    implementation "org.slf4j:slf4j-api:1.7.36"
    implementation "ch.qos.logback:logback-classic:1.2.12"

    // ===== Tests =====
    testImplementation "junit:junit:4.13.2"
    testImplementation "org.springframework:spring-test:3.1.2.RELEASE"
    testImplementation "org.hamcrest:hamcrest:2.2"
    testImplementation "org.mockito:mockito-core:4.11.0"
    testImplementation "org.mockito:mockito-inline:4.11.0"
    testImplementation "org.hsqldb:hsqldb:2.5.2"
}

test {
    useJUnit()
}

xjc {
    xjcVersion.set("2.3.8")
    xsdDir.set(layout.projectDirectory.dir("src/main/resources"))
    includes.set(["sqlmap.xsd"])
    defaultPackage.set("com.example.springbook.user.sqlservice.jaxb")
}

// plugins {
//     id 'java'
//     id("com.github.bjornvester.xjc") version "1.9.1"
// }

// java {
//     toolchain {
//         languageVersion = JavaLanguageVersion.of(8)
//     }
// }
// group = 'com.example'
// version = '1.0-SNAPSHOT'

// sourceCompatibility = 1.8
// targetCompatibility = 1.8

// repositories {
//     mavenCentral()
// }

// dependencies {
//     // ===== Spring Framework 3.1.2 =====
//     implementation "org.springframework:spring-context:3.1.2.RELEASE"
//     implementation "org.springframework:spring-beans:3.1.2.RELEASE"
//     implementation "org.springframework:spring-core:3.1.2.RELEASE"
//     implementation "org.springframework:spring-aop:3.1.2.RELEASE"
//     implementation "org.springframework:spring-tx:3.1.2.RELEASE"
//     implementation "org.springframework:spring-jdbc:3.1.2.RELEASE"
//     implementation "org.springframework:spring-expression:3.1.2.RELEASE"
//     implementation "org.springframework:spring-context-support:3.1.2.RELEASE"
//     implementation "org.springframework:spring-asm:3.1.2.RELEASE"
//     // implementation "org.springframework:spring-oxm:3.1.2.RELEASE"
//     implementation "org.springframework:spring-test:3.1.2.RELEASE"
//     implementation "org.springframework:spring-aspects:3.1.2.RELEASE"
//     // implementation 'cglib:cglib-nodep:2.2.2'

//     // ===== JavaMail / Activation =====
//     implementation 'javax.mail:mail:1.4.7'
//     implementation 'javax.activation:activation:1.1.1'

//     // ===== JDBC =====
//     implementation 'mysql:mysql-connector-java:5.1.49' // 8.x 말고 5.x 권장

//     // ===== Logging =====
//     implementation 'org.slf4j:slf4j-api:1.7.36'
//     implementation 'ch.qos.logback:logback-classic:1.2.12'
//     implementation 'javax.annotation:javax.annotation-api:1.3.2'

//     // implementation "jakarta.annotation:jakarta.annotation-api:2.1.1"    
//     implementation 'org.springframework:spring-oxm:4.2.9.RELEASE'
//     // implementation 'org.springframework:spring-oxm:7.0.8'

//     implementation "com.sun.xml.bind:jaxb-impl:4.0.9"
//     implementation 'javax.xml.bind:jaxb-api:2.3.1'
//     implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'

//     implementation 'cglib:cglib:2.2.2'
//     implementation 'asm:asm:3.3.1'

//     // ===== Tests =====
//     testImplementation 'junit:junit:4.13.2'
//     testImplementation "org.springframework:spring-test:3.1.2.RELEASE"
// 	testImplementation 'org.hamcrest:hamcrest:2.2'
// 	testImplementation 'org.mockito:mockito-core:5.12.0'
// 	testImplementation 'org.mockito:mockito-inline:5.2.0'
// 	testImplementation "org.aspectj:aspectjtools:1.6.6"

//     // testImplementation "jakarta.annotation:jakarta.annotation-api:2.1.1"
//     // testImplementation "org.springframework:spring-oxm:3.1.2.RELEASE"
//     // testImplementation 'org.springframework:spring-oxm:7.0.8'

//     testImplementation "com.sun.xml.bind:jaxb-impl:4.0.9"
//     testImplementation 'javax.xml.bind:jaxb-api:2.3.1'
//     testImplementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
//     testImplementation "org.hsqldb:hsqldb:2.7.4"
//     // testImplementation 'cglib:cglib-nodep:2.2.2'
//     testImplementation 'cglib:cglib:2.2.2'
//     testImplementation 'asm:asm:3.3.1'
// }

// test {
//     useJUnit()

//     // jvmArgs += [
//     //     "--add-opens=java.base/java.lang=ALL-UNNAMED"
//     // ]
// }

// xjc {
//     xjcVersion.set("2.3.8")
//     // xsd 파일의 위치
//     xsdDir.set(layout.projectDirectory.dir("src/main/resources"))
//     // 어떤 xsd 파일을 사용할지
//     includes.set([
//         "sqlmap.xsd"
//     ])
//     // 생성한 클래스를 어떤 패키지에 포함시킬지.
//     // 실제 생성 경로는 build/generated/sources/xjc/... 이지만 set에 작성한 프로젝트의 패키지 경로로 사용할 수 있음.
//     defaultPackage.set(
//         "com.example.springbook.user.sqlservice.jaxb"
//     )
// }